--- a/p/domain-manager.html
+++ b/p/domain-manager.html
@@ -1319,7 +1319,7 @@
                     appearance: "Appearance",
                     themeColor: "Theme Color",
                     customColor: "Custom Color",
-                    footer: "Powered with 💖 by Html Lab",
+                    footer: "Powered with 💖 by 4EverTools",
                     addDomain: "Add Domain",
                     editDomain: "Edit Domain",
                     otherProviderName: "Other Provider Name",
@@ -1386,7 +1386,7 @@
                     appearance: "Apariencia",
                     themeColor: "Color del Tema",
                     customColor: "Color Personalizado",
-                    footer: "Desarrollado con 💖 por Html Lab",
+                    footer: "Desarrollado con 💖 por 4EverTools",
                     addDomain: "Añadir Dominio",
                     editDomain: "Editar Dominio",
                     otherProviderName: "Nombre de Otro Proveedor",
