--- a/p/domain-manager.html
+++ b/p/domain-manager.html
@@ -8,6 +8,18 @@
     <!-- Replaced Font Awesome with Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+
+
+
+
+
+      <!-- Favicon -->
+    <link rel="icon" href="https://bucket.mlcdn.com/a/3336/3336910/images/dec666c4bc2ac137ee26abec65c50df25aeb1867.png">
+
+
+    
     <style>
         :root {
             --primary: #DF1783;
