--- a/p/domain-manager.html
+++ b/p/domain-manager.html
@@ -1167,7 +1167,7 @@
             
         </div>
         <!-- Footer --><footer class="main-footer">
-            <p data-translate-key="footer">Powered with 💖 by Html Lab</p>
+            <p data-translate-key="footer">Powered with 💖 by 4EverTools</p>
         </footer>
     </div>
     
@@ -1353,8 +1353,8 @@
                     autoRenewal: "Auto Renewal",
                     on: "On",
                     off: "Off",
-                    openPage: "Open Page",
-                    viewCredentials: "View Credentials",
+                    openPage: "Open URL",
+                    viewCredentials: "Credentials",
                     statusActive: "Active",
                     statusExpiringIn: "Expiring in {days}d",
                     statusExpired: "Expired",
@@ -1420,8 +1420,8 @@
                     autoRenewal: "Renovación Automática",
                     on: "Activado",
                     off: "Desactivado",
-                    openPage: "Abrir Página",
-                    viewCredentials: "Ver Credenciales",
+                    openPage: "Abrir URL",
+                    viewCredentials: "Credenciales",
                     statusActive: "Activo",
                     statusExpiringIn: "Vence en {days}d",
                     statusExpired: "Vencido",
