--- a/p/domain-manager.html
+++ b/p/domain-manager.html
@@ -16,7 +16,7 @@
 
 
       <!-- Favicon -->
-    <link rel="icon" href="https://bucket.mlcdn.com/a/3336/3336910/images/f5a84d6ec4104e48ce48f5a3bc514e5354aa670c.png">
+    <link rel="icon" href="https://bucket.mlcdn.com/a/3336/3336910/images/a2da3ec2a1a0b600257b358ac17e6c002f33c6bf.png">
 
 
     
@@ -1353,7 +1353,7 @@
                     autoRenewal: "Auto Renewal",
                     on: "On",
                     off: "Off",
-                    openPage: "Open URL",
+                    openPage: "Website",
                     viewCredentials: "Credentials",
                     statusActive: "Active",
                     statusExpiringIn: "Expiring in {days}d",
@@ -1420,7 +1420,7 @@
                     autoRenewal: "Renovación Automática",
                     on: "Activado",
                     off: "Desactivado",
-                    openPage: "Abrir URL",
+                    openPage: "Website",
                     viewCredentials: "Credenciales",
                     statusActive: "Activo",
                     statusExpiringIn: "Vence en {days}d",
