--- a/p/finance-manager-pro.html
+++ b/p/finance-manager-pro.html
@@ -965,7 +965,7 @@ createNewFavicon("apple-touch-icon", "https://bucket.mlcdn.com/a/3336/3336910/im
     
         <footer class="footer-main-content mt-auto pt-8 border-t border-gray-200 dark:border-gray-700">
             <p class="footer-text-centered">
-                <br>Developed with 💖 by Bebell Digital Solutions.<br>
+                <br>Developed with 💖 by 4EverTools.<br>
                 Copyright © 2024 • All rights reserved
             </p>
         </footer>
