--- a/domain-vault/index.html
+++ b/domain-vault/index.html
@@ -19,7 +19,7 @@
     </script>
     
     <!-- Your existing CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <!-- Lucide icons (if used) -->
     <script src="https://unpkg.com/lucide@latest"></script>
