--- a/domain-vault/index.html
+++ b/domain-vault/index.html
@@ -562,7 +562,7 @@
 
   
     <!-- Your new JavaScript file (MODULE type is important!) -->
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
 
