--- a/domain-vault/index.html
+++ b/domain-vault/index.html
@@ -560,7 +560,7 @@
 
 
     <!-- Your new JavaScript file (MODULE type is important!) -->
-    <script type="module" src="script.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
 
