--- a/domain-vault/index.html
+++ b/domain-vault/index.html
@@ -24,6 +24,19 @@
     
     <!-- Chart.js (if used) -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+
+   <!-- Favicon -->
+    <link rel="icon" href="https://bucket.mlcdn.com/a/3336/3336910/images/9b43ae4dc8c7ae0011742b02e7ff93036ff525a1.png">
+
+
+
+
+
+
+
+    
 </head>
 <body>
     <!-- Auth UI will be injected here by JavaScript -->
